--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="main.js"></script>
 </head>
 <body>
+    <h1 id="text">click inside the box to active the property</h1>
     <canvas id="visualization"></canvas>
 </body>
 </html>
